# madr

./: LICENSE  README.md  pyproject.toml
madr/: app.py  models.py  schemas.py  security.py
madr/routers/: auth.py  contas.py  home.py  livros.py  romancistas.py
migrations/versions/: 83603b8d45d0_criando_tabela_livros.py  9d459cc8752a_criando_tabela_de_contas.py  c2eded881035_criando_romancistas.py
tests/: conftest.py  test_auth.py  test_livros.py  test_romancistas.py
